--- a/src/index.css
+++ b/src/index.css
@@ -18,15 +18,7 @@
   }
 
   h1 {
-    @apply font-medium text-white text-2xl;
-  }
-
-  dl dt {
-    @apply uppercase text-xs font-medium text-dark-gray;
-  }
-
-  dl dd {
-    @apply font-bold;
+    @apply font-medium text-white text-2xl md:text-4xl;
   }
 
   input[type="submit"] {
